--- a/.github/workflows/auto_sign.yml
+++ b/.github/workflows/auto_sign.yml
@@ -8,7 +8,7 @@ on:
     - cron: "30,31,32,33,34,35 5 * * 1"
     - cron: "0,1,2,3,4,5 0 * * 2"
     - cron: "55,56,57,58,59 1 * * 2"
-    - cron: "55,56,57,58,59 1 * * "
+    - cron: "55,56,57,58,59 1 * * 4"
 
 jobs:
   run_sign:
