--- a/.github/workflows/auto_sign.yml
+++ b/.github/workflows/auto_sign.yml
@@ -31,5 +31,7 @@ jobs:
           NAME: ${{ secrets.NAME }}
           ADDRESS: ${{ secrets.ADDRESS }}
           IMG: ${{ secrets.IMG }}
+          LONGITUDE: ${{ secrets.LONGITUDE }}
+          LATITUDE: ${{ secrets.LATITUDE }}
         run: |
           python3 auto_sign.py
