--- a/.github/workflows/auto_sign.yml
+++ b/.github/workflows/auto_sign.yml
@@ -1,7 +1,6 @@
 name: auto_sign
 
 on:
-  push:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 1"
@@ -9,7 +8,8 @@ on:
     - cron: "0 0 * * 2"
     - cron: "55 1 * * 2"
     - cron: "30 5 * * 2"
-    - cron: "55 1 * * 4"
+    - cron: "50/1 1 * * 4"
+    - cron: "35/1 2 * * 4"
 
 jobs:
   run_sign:
