--- a/.github/workflows/auto_sign.yml
+++ b/.github/workflows/auto_sign.yml
@@ -9,7 +9,7 @@ on:
     - cron: "55 1 * * 2"
     - cron: "30 5 * * 2"
     - cron: "50/1 1 * * 4"
-    - cron: "30/1 6-7 * * 4"
+    - cron: "30/3 6 * * 4"
 
 jobs:
   run_sign:
