--- a/.github/workflows/auto_sign.yml
+++ b/.github/workflows/auto_sign.yml
@@ -4,12 +4,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 1"
-    - cron: "30 5 * * 1"
-    - cron: "0 0 * * 2"
-    - cron: "55 1 * * 2"
-    - cron: "30 5 * * 2"
-    - cron: "50/1 1 * * 4"
-    - cron: "30/3 6 * * 4"
 
 jobs:
   run_sign:
@@ -33,5 +27,8 @@ jobs:
           IMG: ${{ secrets.IMG }}
           LONGITUDE: ${{ secrets.LONGITUDE }}
           LATITUDE: ${{ secrets.LATITUDE }}
+          MAIL_HOST: ${{ secrets.MAIL_HOST }}
+          MAIL_USER: ${{ secrets.MAIL_USER }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
         run: |
           python3 auto_sign.py
