feat:增加钉钉机器人推送功能

--- a/config.json
+++ b/config.json
@@ -23,5 +23,10 @@
     "mail_user": "",
     "mail_password": ""
   },
-  { "SCKEY": "" }
+  {
+    "SCKEY": ""
+  },
+  {
+    "dingding_hook": ""
+  }
 ]
