Revert "feat:增加钉钉机器人推送功能"

--- a/config.json
+++ b/config.json
@@ -23,10 +23,5 @@
     "mail_user": "",
     "mail_password": ""
   },
-  {
-    "SCKEY": ""
-  },
-  {
-    "dingding_hook": ""
-  }
+  { "SCKEY": "" }
 ]
